syntax = "proto3";

option go_package = "irpc3";

package irpc3;

service PushTable {
  rpc PushTable(Table) returns (PTStatus) {}
}

message Table{
  TableInfo table_info = 1;
  repeated Record record = 2;
}

message TableInfo {
  string table_name = 1;
  int64 total_row = 2;
  int64 total_col = 3;  
}

message Record{
  Publisher publisher = 1;
  Book book = 2;
  Customer customer = 3;
  Orders orders = 4;
}

message Publisher{
  int64 id = 1;
  string name = 2;
  string nation = 3;
}

message Book{
  int64 id = 1;
  string title = 2;
  string authors = 3;
  int64 publisher_id = 4;
  int64 copies = 5;
}

message Customer{
  int64 id = 1;
  string name = 2;
  int64 rank = 3;
}

message Orders{
  int64 customer_id = 1;
  int64 book_id = 2;
  int64 quantity = 3;
}

message PTStatus{
  int64 is_suc = 1;
}